--- a/Cloth App/Storyboard/Auth.storyboard
+++ b/Cloth App/Storyboard/Auth.storyboard
@@ -1668,7 +1668,7 @@
                                                 </constraints>
                                                 <color key="textColor" name="Black_Theme_Color"/>
                                                 <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="14"/>
-                                                <textInputTraits key="textInputTraits" keyboardType="emailAddress" returnKeyType="next"/>
+                                                <textInputTraits key="textInputTraits" autocorrectionType="no" keyboardType="emailAddress" returnKeyType="next"/>
                                                 <userDefinedRuntimeAttributes>
                                                     <userDefinedRuntimeAttribute type="color" keyPath="placeholderColor">
                                                         <color key="value" name="Black_Theme_Color"/>
