--- a/Cloth App/NewModule/RateView/XIB/RatePopup.xib
+++ b/Cloth App/NewModule/RateView/XIB/RatePopup.xib
@@ -17,35 +17,39 @@
         </array>
     </customFonts>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="RateAppPopup" customModule="Clothing_Click" customModuleProvider="target"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="RatePopup" customModule="Clothing_Click" customModuleProvider="target">
+            <connections>
+                <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view clipsSubviews="YES" contentMode="scaleToFill" id="iN0-l3-epB" customClass="RateAppPopup" customModule="Clothing_Click" customModuleProvider="target">
+        <view clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="b9d-eT-sih">
-                    <rect key="frame" x="20" y="343.33333333333331" width="353" height="165.33333333333331"/>
+                <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hzf-BR-Voh">
+                    <rect key="frame" x="30" y="343.33333333333331" width="333" height="165.33333333333331"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enjoying Your Experience?" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eJy-ih-XNf">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enjoying Your Experience?" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Klt-4z-ndO">
                             <rect key="frame" x="20.000000000000014" y="20" width="235.33333333333337" height="23.666666666666671"/>
                             <fontDescription key="fontDescription" name="Roboto-Medium" family="Roboto" pointSize="20"/>
                             <color key="textColor" name="Black_Theme_Color"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please rate us on the App Store, we value your support and feedback. Thank you." lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4nk-os-Bq8">
-                            <rect key="frame" x="20" y="43.666666666666686" width="313" height="37.666666666666657"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please rate us on the App Store, we value your support and feedback. Thank you." lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZGT-kc-3Hv">
+                            <rect key="frame" x="20" y="43.666666666666686" width="293" height="37.666666666666657"/>
                             <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="16"/>
                             <color key="textColor" name="Black_Theme_Color"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="KBk-H6-skg">
-                            <rect key="frame" x="20" y="101.33333333333337" width="313" height="44"/>
+                        <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="JXP-G7-7bz">
+                            <rect key="frame" x="20" y="101.33333333333337" width="293" height="44"/>
                             <subviews>
-                                <button opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="K60-xc-5HX" customClass="CustomButton" customModule="Clothing_Click" customModuleProvider="target">
-                                    <rect key="frame" x="0.0" y="0.0" width="141.66666666666666" height="44"/>
+                                <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zX0-ws-8Uf" customClass="CustomButton" customModule="Clothing_Click" customModuleProvider="target">
+                                    <rect key="frame" x="0.0" y="0.0" width="131.66666666666666" height="44"/>
                                     <color key="backgroundColor" name="App_White_Color"/>
                                     <constraints>
-                                        <constraint firstAttribute="height" constant="44" id="m2p-YD-l3i"/>
+                                        <constraint firstAttribute="height" constant="44" id="nqf-Ip-jkq"/>
                                     </constraints>
                                     <fontDescription key="fontDescription" name="Roboto-Medium" family="Roboto" pointSize="16"/>
                                     <state key="normal" title="Skip">
@@ -60,14 +64,14 @@
                                         </userDefinedRuntimeAttribute>
                                     </userDefinedRuntimeAttributes>
                                     <connections>
-                                        <action selector="laterTapped:" destination="iN0-l3-epB" eventType="touchUpInside" id="6gZ-qC-WN5"/>
+                                        <action selector="skipOnPress:" destination="-1" eventType="touchUpInside" id="m4v-Vg-OP5"/>
                                     </connections>
                                 </button>
-                                <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="01e-IJ-M5a" customClass="CustomButton" customModule="Clothing_Click" customModuleProvider="target">
-                                    <rect key="frame" x="171.66666666666663" y="0.0" width="141.33333333333337" height="44"/>
+                                <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wir-qx-4My" customClass="CustomButton" customModule="Clothing_Click" customModuleProvider="target">
+                                    <rect key="frame" x="161.66666666666663" y="0.0" width="131.33333333333337" height="44"/>
                                     <color key="backgroundColor" name="Black_Theme_Color"/>
                                     <constraints>
-                                        <constraint firstAttribute="height" constant="44" id="6wP-Tu-4fb"/>
+                                        <constraint firstAttribute="height" constant="44" id="eUV-Ap-W1l"/>
                                     </constraints>
                                     <fontDescription key="fontDescription" name="Roboto-Medium" family="Roboto" pointSize="16"/>
                                     <state key="normal" title="Rate Us">
@@ -79,7 +83,7 @@
                                         </userDefinedRuntimeAttribute>
                                     </userDefinedRuntimeAttributes>
                                     <connections>
-                                        <action selector="rateNowTapped:" destination="iN0-l3-epB" eventType="touchUpInside" id="sL2-eK-lz6"/>
+                                        <action selector="rateOnPress:" destination="-1" eventType="touchUpInside" id="S8Z-Cb-SDB"/>
                                     </connections>
                                 </button>
                             </subviews>
@@ -87,32 +91,28 @@
                     </subviews>
                     <color key="backgroundColor" name="App_White_Color"/>
                     <constraints>
-                        <constraint firstAttribute="trailing" secondItem="KBk-H6-skg" secondAttribute="trailing" constant="20" id="3NW-Es-fkI"/>
-                        <constraint firstItem="eJy-ih-XNf" firstAttribute="leading" secondItem="b9d-eT-sih" secondAttribute="leading" constant="20" id="7zQ-C9-1UF"/>
-                        <constraint firstAttribute="bottom" secondItem="KBk-H6-skg" secondAttribute="bottom" constant="20" id="GRT-Rd-wza"/>
-                        <constraint firstItem="KBk-H6-skg" firstAttribute="top" secondItem="4nk-os-Bq8" secondAttribute="bottom" constant="20" id="Pd8-do-LG3"/>
-                        <constraint firstItem="4nk-os-Bq8" firstAttribute="top" secondItem="eJy-ih-XNf" secondAttribute="bottom" id="QKr-3E-bB3"/>
-                        <constraint firstItem="eJy-ih-XNf" firstAttribute="top" secondItem="b9d-eT-sih" secondAttribute="top" constant="20" id="QPS-rd-piP"/>
-                        <constraint firstAttribute="trailing" secondItem="4nk-os-Bq8" secondAttribute="trailing" constant="20" id="Wf1-ax-ZJp"/>
-                        <constraint firstItem="4nk-os-Bq8" firstAttribute="leading" secondItem="b9d-eT-sih" secondAttribute="leading" constant="20" id="Xhs-sQ-XUL"/>
-                        <constraint firstItem="KBk-H6-skg" firstAttribute="leading" secondItem="b9d-eT-sih" secondAttribute="leading" constant="20" id="bHi-LH-lAH"/>
+                        <constraint firstAttribute="trailing" secondItem="JXP-G7-7bz" secondAttribute="trailing" constant="20" id="9yq-hd-m48"/>
+                        <constraint firstAttribute="trailing" secondItem="ZGT-kc-3Hv" secondAttribute="trailing" constant="20" id="BCD-Pz-fdv"/>
+                        <constraint firstItem="Klt-4z-ndO" firstAttribute="top" secondItem="Hzf-BR-Voh" secondAttribute="top" constant="20" id="DIQ-5E-7kF"/>
+                        <constraint firstItem="ZGT-kc-3Hv" firstAttribute="top" secondItem="Klt-4z-ndO" secondAttribute="bottom" id="K6Q-XS-2c7"/>
+                        <constraint firstItem="JXP-G7-7bz" firstAttribute="top" secondItem="ZGT-kc-3Hv" secondAttribute="bottom" constant="20" id="QIc-9d-0Kv"/>
+                        <constraint firstAttribute="bottom" secondItem="JXP-G7-7bz" secondAttribute="bottom" constant="20" id="REP-TG-AEA"/>
+                        <constraint firstItem="JXP-G7-7bz" firstAttribute="leading" secondItem="Hzf-BR-Voh" secondAttribute="leading" constant="20" id="YbL-9p-6tL"/>
+                        <constraint firstItem="ZGT-kc-3Hv" firstAttribute="leading" secondItem="Hzf-BR-Voh" secondAttribute="leading" constant="20" id="bGk-h5-8gz"/>
+                        <constraint firstItem="Klt-4z-ndO" firstAttribute="leading" secondItem="Hzf-BR-Voh" secondAttribute="leading" constant="20" id="cTZ-ir-Mf5"/>
                     </constraints>
                 </view>
             </subviews>
-            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
+            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.29999999999999999" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="b9d-eT-sih" secondAttribute="trailing" constant="20" id="1xv-N6-5Y5"/>
-                <constraint firstItem="b9d-eT-sih" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="FJg-wR-35R"/>
-                <constraint firstItem="b9d-eT-sih" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="PG4-uK-ONp"/>
-                <constraint firstItem="b9d-eT-sih" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" id="tzL-Jd-H9u"/>
+                <constraint firstItem="Hzf-BR-Voh" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="30" id="1bP-oF-BBJ"/>
+                <constraint firstItem="Hzf-BR-Voh" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="SI0-gr-Blv"/>
+                <constraint firstItem="Hzf-BR-Voh" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="Xy4-Aq-rJF"/>
+                <constraint firstAttribute="trailing" secondItem="Hzf-BR-Voh" secondAttribute="trailing" constant="30" id="ZJn-pO-2PN"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <connections>
-                <outlet property="contentView" destination="b9d-eT-sih" id="ua4-nu-9HO"/>
-                <outlet property="skipOnPress" destination="K60-xc-5HX" id="gW9-CO-FTD"/>
-            </connections>
-            <point key="canvasLocation" x="24" y="-1"/>
+            <point key="canvasLocation" x="48" y="-1"/>
         </view>
     </objects>
     <resources>
